# SNPChat17021026

./: .env.example  .env.production  .gitignore  ANALYSIS_INDEX.md  ANALYSIS_QUICK_SUMMARY.txt  ANALYSIS_SUMMARY.txt  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_DIAGRAMS.md  BLOAT_ANALYSIS_REPORT.md  CHATSNP_PROJECT_EXPLORATION.md  CHATSNP_QUICK_REFERENCE.md  CLAUDE.md  CODEBASE_EXPLORATION.md  CODE_AUDIT_INDEX.md  CODE_AUDIT_QUICK_FIXES.md  CODE_AUDIT_SUMMARY.txt  CODE_QUALITY_AUDIT.md  COMPREHENSIVE_ANALYSIS.md  ChatSNP  DETAILED_FINDINGS.md  DOCKER_COMPOSE_ANALYSIS.md  EXECUTIVE_SUMMARY.md  EXPLORATION_INDEX.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  LLM_CONFIG_EDIT_GUIDE.md  LLM_CONFIG_INVENTORY.md  LLM_CONFIG_QUICK_REF.txt  LLM_CONFIG_README.md  LLM_DEFAULTS_AUDIT.md  LLM_DEFAULTS_CHECKLIST.md  LLM_DEFAULTS_INDEX.md  LLM_DEFAULTS_QUICK_VIEW.txt  LLM_DEFAULTS_REFERENCE.md  LLM_DEFAULTS_SUMMARY.txt  PARALLEL_CONTEXT_FIX.md  PERFORMANCE_FIX_PLAN.md  PERFORMANCE_REPORT_RAG.md  PHASE8_ARCHITECTURE.txt  PHASE8_EXPLORATION.md  (+44 more)
.claude/: settings.json
.claude-disabled-gsd-20260419-081329/: gsd-file-manifest.json
.planning/: PHASE_4_ANALYSIS_INDEX.md  PHASE_4_CODE_REFERENCE.md  PHASE_4_KEY_FINDINGS.md  PHASE_4_SEARCH_ANALYSIS.md  PROJECT.md  ROADMAP.md  STATE.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  pyrightconfig.json  rag_performance_test.py
backend/app/: __init__.py  config.py  db.py  embeddings.py  main.py  models.py  qdrant_client.py  redis_client.py  schemas.py
backend/app/api/: deps.py
backend/app/api/routers/: admin.py  sessions.py
backend/app/chatsnp_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/app/repositories/: messages.py  sessions.py
backend/app/services/: __init__.py  chat_service.py
backend/scripts/: backfill_parent_messages.sql  recreate_qdrant_collections.py  test_embedding_performance.py
backend/src/: main.py
backend/src/api/: admin.py  chat.py  deps.py  feedback.py  memories.py  tts.py  upload.py  upload_optimized.py
backend/src/core/: celery_config.py  config.py  constants.py  cors.py  database_pool.py  db.py  http_client.py  mem0_config.py  mem0_local.py  qdrant_optimized.py  qdrant_setup.py  redis_client.py  vanna_setup.py
backend/src/models/: models.py
backend/src/repositories/: messages.py  sessions.py
backend/src/schemas/: schemas.py
backend/src/services/: chat_service.py  chunk_optimizer.py  chunk_splitter.py  context_builder.py  conversation_tree.py  docling_service.py  intent_router.py  kreuzberg_service.py  lida_service.py  ocr_service.py  parent_chunk_store.py  query_expander.py  router_service.py  task_dispatcher.py  tts_service.py
backend/src/services/docling/: __init__.py  chunker.py  models.py  orchestrator.py  parser.py  table_detector.py
backend/src/services/search/: __init__.py  hybrid_search.py  lexical_search.py  query_enhancer.py  search_ranking.py  semantic_cache.py
backend/src/utils/: summarization.py  token_estimator.py
backend/src/worker/: celery_app.py  chat_tasks.py  data_tasks.py  embedding_optimized.py  gardener_tasks.py  helpers.py  media_tasks.py  tasks.py
backend/src/worker/rag/: __init__.py  context.py  search_helpers.py  synthesis.py
backend/tests/: conftest.py  test_chat_flow.py  test_chunk_parent_model.py  test_chunk_splitter.py  test_context_builder.py  test_conversation_branching.py  test_hybrid_multi_query.py  test_intent_router.py  test_main.py  test_ocr_integration.py  test_ocr_service.py  test_parent_child_integration.py  test_parent_chunk_store.py  test_query_enhancer.py  test_rag_helpers.py  test_sanitization.py  test_semantic_cache.py  test_summarization.py  test_system_prompt.py
backend/tests/performance/: __init__.py  analyze_performance.py  run_perf_tests.sh  test_upload_performance.py
docs/: performance-improvements.md
frontend/: .dockerignore  .env.development  .env.local.example  .env.production  .eslintrc.json  CHATSNP_ENHANCEMENT_README.md  Dockerfile  Home.test.tsx  README.md  jest.config.js  (+5 more)
(+303 files in other folders)
