[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatsnp-backend"
version = "0.1.0"
description = "ChatSNP backend services for chat persistence and RAG"
requires-python = ">=3.10"
dependencies = [
    "fastapi[all]",
    "uvicorn[standard]",
    "SQLAlchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.3",
    "redis>=5.0.0",
    "qdrant-client>=1.9.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "anyio>=4.3.0",
"ruff>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
