[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatsnp-backend"
version = "0.1.0"
description = "ChatSNP backend services for chat persistence and RAG"
requires-python = ">=3.10"
dependencies = [
    # Web framework
    "fastapi[all]",
    "uvicorn[standard]",
    # Database
    "SQLAlchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.3",
    # Cache & Message Broker
    "redis>=5.0.0",
    # Vector DB
    "qdrant-client>=1.9.0",
    # HTTP client
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    # Celery — Task Queue
    "celery[redis]>=5.3.0",
    "flower>=2.0.0",
    # AI / ML Services
    "vanna[postgres,qdrant,openai]",
    "openai>=1.0.0",
    "lida",
    "docling",
    "kreuzberg",
    "mem0ai",
    "edge-tts",
    "langgraph",
    "faster-whisper>=1.0.0",
    # OCR for scanned documents (Phase 9)
    "paddleocr>=2.7",
    "paddlepaddle>=2.6",
    "pdf2image>=1.16",
    # Agentic Frameworks
    "pydantic-ai[openai]>=0.0.14",
    "llama-index>=0.11.0",
    "llama-index-vector-stores-qdrant",
    "llama-index-embeddings-huggingface",
    "tavily-python>=0.3.5",
    # Full-text search (BM25)
    "whoosh>=2.7.4",
    # Dev/Test
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "anyio>=4.3.0",
    "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
